# Software-Engineering-for-Data-Intensive-AI-Applications-DIT825

./: README.md
DIT825-master/: README.md  package-lock.json
DIT825-master/Admin/: package-lock.json  package.json  tailwind.config.js
DIT825-master/Admin/src/: App.vue
DIT825-master/Admin/src/components/: Average.vue  FeaturesDisplay.vue  FileUpload.vue  Header.vue
DIT825-master/Admin/src/router/: index.js
DIT825-master/Admin/src/views/: AnalyticsView.vue  ManageView.vue  TrainView.vue
DIT825-master/FlixPredix/flixpredix-app/: README.md  package-lock.json  package.json
DIT825-master/FlixPredix/flixpredix-app/src/: App.vue  main.js
DIT825-master/FlixPredix/flixpredix-app/src/components/: BudgetSlide.vue  ErrorAlert.vue  GenreSelect.vue  RegionSelect.vue  RunTimeSelect.vue  SuccessAlert.vue
DIT825-master/FlixPredix/flixpredix-app/src/router/: index.js
DIT825-master/FlixPredix/flixpredix-app/src/views/: CredentialsPage.vue  (+2 more)
DIT825-master/Model/: Dockerfile  README.md  models.db  pyproject.toml
DIT825-master/Model/data/: normalized.db
DIT825-master/Model/models/: model-v1.joblib  model-v2.joblib  models.db  models.json
DIT825-master/Model/scripts/: commit_model.py  init_db.py  normalize_data.py  test.py  test_model.py  train_model.py
DIT825-master/Model/server/: __init__.py  logger.py  model.py  model_registry.py  testBlob.txt
DIT825-master/Model/server/router/: admin.py  consumer.py  main.py
DIT825-master/k8s/: admin-deployment.yml  admin-service.yml  app-deployment.yml  app-service.yml  ingress.yml  server-deployment.yml  server-service.yml
