[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Example Author <example.author@example.com>"]
packages = [
    { include = "server" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
scikit-learn = "^1.2.0"
joblib = "^1.2.0"
python-multipart = "^0.0.5"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
